package com.example.mycalculator;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;

import androidx.test.ext.junit.rules.ActivityScenarioRule;
import androidx.test.ext.junit.runners.AndroidJUnit4;

import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

@RunWith(AndroidJUnit4.class)
public class MainActivityInstrumentedTest {

    @Rule
    public ActivityScenarioRule<MainActivity> activityRule =
            new ActivityScenarioRule<>(MainActivity.class);

    /**
     * Testing the addition function, this test will succeed
     */
    @Test
    public void testAddition() {
        onView(withId(R.id.btn1)).perform(click());
        onView(withId(R.id.btn_plus)).perform(click());
        onView(withId(R.id.btn2)).perform(click());
        onView(withId(R.id.btn_equal)).perform(click());
        onView(withId(R.id.textview_input_display)).check(matches(withText("3")));
    }

    /**
     * Testing the multiply function, this test will fail
     */
    @Test
    public void testMultiply() {
        onView(withId(R.id.btn1)).perform(click());
        onView(withId(R.id.btn_mult)).perform(click());
        onView(withId(R.id.btn2)).perform(click());
        onView(withId(R.id.btn_equal)).perform(click());
        onView(withId(R.id.textview_input_display)).check(matches(withText("3")));
    }
}
